Use generic types for key and value