@@ -1,6 +1,8 @@
 package com.tmsvr.databases.lsmtree.sstable;
 
 import com.tmsvr.databases.DataRecord;
+import com.tmsvr.databases.serde.SerDe;
+import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 
 import java.io.EOFException;
@@ -22,17 +24,23 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Slf4j
-public class SSTable {
+public class SSTable<K extends Comparable<K>, V> {
     private static final String INDEX_FILE_SUFFIX = ".index";
     private static final String DATA_FILE_SUFFIX = ".data";
 
     private final Path indexFile;
     private final Path dataFile;
-    private final Map<String, Long> index;
+    @Getter
+    private final SerDe<K> keySerDe;
+    @Getter
+    private final SerDe<V> valueSerDe;
+    private final Map<K, Long> index;
 
-    public SSTable(String filename) throws IOException {
+    public SSTable(String filename, SerDe<K> keySerDe, SerDe<V> valueSerDe) throws IOException {
         this.indexFile = Paths.get(filename + INDEX_FILE_SUFFIX);
         this.dataFile = Paths.get(filename + DATA_FILE_SUFFIX);
+        this.keySerDe = keySerDe;
+        this.valueSerDe = valueSerDe;
         this.index = loadIndex();
     }
 
@@ -40,26 +48,26 @@ public class SSTable {
         return index.size();
     }
 
-    public void write(List<DataRecord> records) throws IOException {
+    public void write(List<DataRecord<K, V>> records) throws IOException {
         this.write(records.stream().collect(Collectors.toMap(DataRecord::key, DataRecord::value)));
     }
 
-    public void write(Map<String, String> data) throws IOException {
+    public void write(Map<K, V> data) throws IOException {
         if (Files.exists(indexFile)) {
             log.warn("SSTable can't be written, Index file already exists");
             return;
         }
 
-        Map<String, String> sortedData = new TreeMap<>(data);
+        Map<K, V> sortedData = new TreeMap<>(data);
 
         // Write data to a temporary file
         Path tempFile = Files.createFile(Path.of(dataFile.getFileName().toString() + ".tmp"));
 
         // Write the data to the temporary file and create an index
-        Map<String, Long> newIndex = new TreeMap<>();
+        Map<K, Long> newIndex = new TreeMap<>();
         long offset = 0;
-        for (Map.Entry<String, String> entry : sortedData.entrySet()) {
-            Files.write(tempFile, (entry.getKey() + "::" + entry.getValue() + System.lineSeparator()).getBytes(), StandardOpenOption.APPEND);
+        for (Map.Entry<K, V> entry : sortedData.entrySet()) {
+            Files.write(tempFile, (keySerDe.serialize(entry.getKey()) + "::" + valueSerDe.serialize(entry.getValue()) + System.lineSeparator()).getBytes(), StandardOpenOption.APPEND);
             newIndex.put(entry.getKey(), offset);
             offset++;
         }
@@ -78,7 +86,8 @@ public class SSTable {
         index.putAll(newIndex);
     }
 
-    public Optional<String> getValue(String key) throws IOException {
+    public Optional<V> getValue(K key) throws IOException {
+        String stringKey = keySerDe.serialize(key);
         Long offset = index.get(key);
         if (offset == null) {
             return Optional.empty();
@@ -97,22 +106,30 @@ public class SSTable {
 
         String foundKey = result.split("::")[0];
 
-        if (!foundKey.equals(key)) {
+        if (!foundKey.equals(stringKey)) {
             throw new IllegalStateException("Unexpected key: " + foundKey);
         }
-        return Optional.of(result.split("::")[1]);
+        return Optional.ofNullable(valueSerDe.deserialize(result.split("::")[1]));
     }
 
-    List<DataRecord> getAllLines() throws IOException {
+    public List<DataRecord<K, V>> getAllLines() throws IOException {
         return Files.readAllLines(dataFile).stream()
-                .map(line -> new DataRecord(line.split("::")[0], line.split("::")[1]))
-                .toList();
+                .map(line -> {
+                    String[] parts = line.split("::", 2);
+                    if (parts.length < 2) {
+                        throw new IllegalArgumentException("Invalid input format: " + line);
+                    }
+                    K key = keySerDe.deserialize(parts[0]);
+                    V value = valueSerDe.deserialize(parts[1]);
+                    return new DataRecord<>(key, value);
+                })
+                .collect(Collectors.toList());
     }
 
     @SuppressWarnings("unchecked")
-    private Map<String, Long> loadIndex() throws IOException {
+    private Map<K, Long> loadIndex() throws IOException {
         try (ObjectInputStream indexObjIn = new ObjectInputStream(new FileInputStream(indexFile.toFile()))) {
-            return (Map<String, Long>) indexObjIn.readObject();
+            return (Map<K, Long>) indexObjIn.readObject();
         } catch (ClassNotFoundException e) {
             throw new IOException("Failed to load index", e);
         } catch (EOFException | FileNotFoundException e) {
